# cheatstat

./: .gitignore  LICENSE  README.md  README_de.md  README_en.md  pyproject.toml
cheatstat/: __init__.py
conda_recipe/: meta.yaml
docs/de/: api.md  documentation_de.md  example.md  index.md  installation.md  usage.md
docs/en/: api.md  documentation_en.md  example.md  index.md  installation.md  usage.md
