[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================
# Projektmetadaten
# ============================================================

[project]
name = "cheatstat"
version = "4.1.1"
description = "Simple statistical functions for social scientists with survey weighting support"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Jürgen Leibold", email = "juergen.leibold@uni-goettingen.de" }
]

maintainers = [
    { name = "Jürgen Leibold", email = "juergen.leibold@uni-goettingen.de" }
]

keywords = [
    "statistics",
    "social sciences",
    "survey",
    "weighting",
    "ALLBUS",
    "GESIS",
    "regression",
    "t-test",
    "cronbach",
    "frequency table",
    "cross-tabulation",
    "sozialwissenschaften",
    "statistik"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: German",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Education",
    "Topic :: Sociology"
]

# ============================================================
# Pflichtabhängigkeiten
# ============================================================

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0"
]

# ============================================================
# Optionale Abhängigkeiten
# ============================================================

[project.optional-dependencies]

# Für OLS-Regression (regress())
regression = [
    "statsmodels>=0.13.0"
]

# Für schnelle Berechnungen (biV)
performance = [
    "numba>=0.56.0"
]

# Für Excel-Export
excel = [
    "openpyxl>=3.0.0"
]

# Für SPSS-Dateien (.sav)
spss = [
    "pyreadstat>=1.1.0"
]

# Für Entwicklung
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "sphinx>=5.0.0",
    "myst-parser>=0.18.0",
    "sphinx-rtd-theme>=1.0.0"
]

# Alles zusammen (empfohlen)
full = [
    "statsmodels>=0.13.0",
    "numba>=0.56.0",
    "openpyxl>=3.0.0",
    "pyreadstat>=1.1.0"
]

# ============================================================
# Projekt-URLs
# ============================================================

[project.urls]
Homepage         = "https://github.com/JALeibold/cheatstat"
Documentation    = "https://github.com/JALeibold/cheatstat/blob/main/docs/de/index.md"
"Documentation (EN)" = "https://github.com/JALeibold/cheatstat/blob/main/docs/en/index.md"
Repository       = "https://github.com/JALeibold/cheatstat"
"Bug Tracker"    = "https://github.com/JALeibold/cheatstat/issues"
Changelog        = "https://github.com/JALeibold/cheatstat/blob/main/CHANGELOG.md"

# ============================================================
# Paketstruktur
# ============================================================

[tool.setuptools.packages.find]
where = ["."]
include = ["cheatstat*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
cheatstat = ["py.typed"]

# ============================================================
# Black: Code-Formatierung
# ============================================================

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ============================================================
# pytest: Tests
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=cheatstat",
    "--cov-report=term-missing"
]

# ============================================================
# mypy: Typprüfung
# ============================================================

[tool.mypy]
python_version = "3.8"


warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

